// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dkjKgF csAlHK"
>
  <div
    class="sc-eDnVMP dGPQpJ"
  >
    <span
      class="sc-jSwlEQ"
    >
      0
    </span>
    <span
      class="sc-gKHVLF cDDjXv"
    >
      42
    </span>
  </div>
  <button
    class="sc-bcPKhP sc-grXZZQ hvjmXi gOZdGR"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dkjKgF csAlHK"
>
  <div
    class="sc-hLclGa bHNjQR"
  >
    🛌🛌
  </div>
  <button
    class="sc-bcPKhP sc-grXZZQ gobXA-d gOZdGR"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dkjKgF csAlHK"
>
  <div
    class="sc-hLclGa bHNjQR"
  >
    🍅
  </div>
  <button
    class="sc-bcPKhP sc-grXZZQ gobXA-d gOZdGR"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dkjKgF csAlHK"
>
  <div
    class="sc-hLclGa bHNjQR"
  >
    🛌
  </div>
  <button
    class="sc-bcPKhP sc-grXZZQ gobXA-d gOZdGR"
  >
    Start
  </button>
</div>
`;
